# reachy-mini-apps

./: .gitignore  AGENTS.md  Makefile  README.md  agents.local.md.example  pyproject.toml  skills  systemlibs.sh
.claude/: claude.md
.claude/skills/reachy-mini/: REFERENCES.md  SKILL.md
.claude/skills/reachy-mini/docs/: connection_matrix.md  debugging_checklist.md  emotions.md  media_backends.md  safety_limits.md
.claude/skills/reachy-mini/snippets/: emotions.py  rate.py  vision_utils.py
.claude/skills/reachy-mini/templates/: hello_audio_tone.py  hello_emotions.py  hello_motion_basic.py  hello_recorded_emotions.py  hello_vision_frames.py
apps/: README.md
apps/audio_chat/: README.md
apps/dance_party/: main.py
apps/dog_tracker/: .env.example  Makefile  README.md  config.py  controller.py  detector.py  index.html  main.py  plan.md  pyproject.toml  style.css
apps/dog_tracker/dog_tracker/: __init__.py  config.py  controller.py  detection.py  main.py  worker.py
apps/dog_tracker/tests/: test_config.py  test_controller.py  test_detection.py
apps/hello_emotion/: README.md  index.html  main.py  plan.md  pyproject.toml  style.css
apps/hello_emotion/hello_emotion/: __init__.py  main.py
apps/hello_emotion/tests/: test_emotions.py
apps/hello_motion/: Makefile  README.md  index.html  main.py  plan.md  pyproject.toml  style.css
apps/hello_motion/hello_motion/: __init__.py  main.py
apps/hello_motion/tests/: test_motion.py
apps/hello_vision/: Makefile  README.md  index.html  main.py  plan.md  pyproject.toml  style.css
apps/hello_vision/hello_vision/: __init__.py  main.py
apps/hello_vision/tests/: test_capture.py
apps/target_tracking/: README.md  pyproject.toml  track_target.py
apps/target_tracking/src/: __init__.py  main.py  tracker.py
apps/vision_demo/: README.md
reference/: __init__.py
reference/.codex/: CODEX.md
reference/.codex/rules/: 10_repo_map.md  20_sdk_tasks.md  30_recipes.md  40_daemon_api.md
reference/docs/: ASK_CODEX_PROMPT.md  SDK_RECIPES.md  WORKFLOW.md
scripts/: check-agent-scaffold.sh  check-apps.sh  clone_vendor.py  list-apps.sh  run-app.sh  test-apps.sh  typecheck-apps.sh
