[project]
name = "reachy-mini-workspace"
version = "0.1.0"
description = "Personal workspace for building apps with the Reachy Mini SDK (pip runtime + local reference clone)."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipython>=9.8.0",
  "reachy-mini>=0.0.0", # loosened; pin after first successful run
]

[project.optional-dependencies]


[tool.uv]
# uv will manage the lockfile (uv.lock) after you run `uv sync`.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
