[project]
name = "reachy-mini-workspace"
version = "0.1.0"
description = "Personal workspace for building apps with the Reachy Mini SDK (pip runtime + local reference clone)."
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
  "huggingface-hub",
  "ipython",
  "pillow",
  "reachy-mini[gstreamer]>=1.2.4",
  "supervision",
  "timm",
  "transformers",
  "torch<2.3.0",
  "ultralytics"
]

[project.optional-dependencies]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu" },
]
torchvision = [
    { index = "pytorch-cpu" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv]
# uv will manage the lockfile (uv.lock) after you run `uv sync`.

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
