[project]
name = "reachy-mini-apps"
version = "0.1.0"
description = "Monorepo for Reachy Mini tutorial and demo applications"
readme = "README.md"
requires-python = ">=3.10,<3.11"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true

[tool.pytest.ini_options]
testpaths = ["apps"]
python_files = ["test_*.py", "*_test.py"]
