[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-mini-dog-tracker"
version = "0.2.0"
description = "Canonical Reachy Mini camera tracking example using Hugging Face inference."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "huggingface-hub>=1.4,<2",
  "python-dotenv>=1.0,<2",
  "reachy-mini[opencv]>=1.8.3,<2",
  "requests>=2.33,<3",
]
keywords = ["reachy-mini-app", "robotics", "computer-vision", "hugging-face"]

[project.entry-points."reachy_mini_apps"]
"reachy-mini-dog-tracker" = "dog_tracker.main:DogTracker"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
dog_tracker = ["assets/*.wav"]
