[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-mini-hello-emotion"
version = "0.2.0"
description = "Canonical Reachy Mini example for playing recorded emotions."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "reachy-mini>=1.8.3,<2",
]
keywords = ["reachy-mini-app", "robotics", "emotions"]

[project.entry-points."reachy_mini_apps"]
"reachy-mini-hello-emotion" = "hello_emotion.main:HelloEmotion"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
hello_emotion = ["**/*"]
