[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-mini-hello-motion"
version = "0.2.0"
description = "Canonical Reachy Mini example for gestures and real-time motion control."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "reachy-mini>=1.8.3,<2",
]
keywords = ["reachy-mini-app", "robotics", "motion"]

[project.entry-points."reachy_mini_apps"]
"reachy-mini-hello-motion" = "hello_motion.main:HelloMotion"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
hello_motion = ["**/*"]
