[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "reachy-mini-hello-vision"
version = "0.2.0"
description = "Canonical Reachy Mini example for robust camera frame capture."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "reachy-mini[opencv]>=1.8.3,<2",
]
keywords = ["reachy-mini-app", "robotics", "computer-vision"]

[project.entry-points."reachy_mini_apps"]
"reachy-mini-hello-vision" = "hello_vision.main:HelloVision"

[tool.setuptools]
package-dir = { "" = "." }
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
hello_vision = ["**/*"]
