[project]
name = "target-tracking-app"
version = "0.1.0"
description = "Reachy Mini target tracking app using YOLO."
readme = "README.md"
requires-python = ">=3.10, <3.11"
dependencies = [
  "huggingface-hub",
  "ipython",
  "pillow",
  "reachy-mini[gstreamer]>=1.2.4",
  "supervision",
  "timm",
  "transformers",
  "torch<2.3.0",
  "ultralytics"
]
keywords = ["reachy-mini-app"]

[project.entry-points."reachy_mini_apps"]
target_tracking = "target_tracking_app.main:TargetTrackingApp"

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
target_tracking_app = ["**/*"]
