[project]
name = "reachy-mini-target-tracking"
version = "0.1.0"
description = "YOLO-based target tracking for Reachy Mini."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
  "numpy>=1.26",
  "opencv-python",
  "reachy-mini[gstreamer]>=1.2.6",
  "ultralytics>=8.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.8",
  "mypy>=1.10",
  "pytest>=8.0",
]
laptop = [
  "ipython>=8.0",
]
reachy = []

[tool.uv]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E203"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
no_implicit_optional = true
